Initial kNN commit

--- a/kNN/kNN jupyter/kNN.ipynb
+++ b/kNN/kNN jupyter/kNN.ipynb
@@ -9,19 +9,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an example to see how kNN works.\n",
-    "Here we assume a simple dataset with 2 parameters to better visualize the data. (kNN can work on more than 2 parameters but for understanding purpose we take only 2)\n",
-    "The 2 parameters are population and number of deaths:\n",
-    "*****Do not take this example seriously*****\n",
-    "A fatal disease has spread across many cities of the world. The most dangerous thing about this disease is that it has no symptoms and people just suddenly die.\n",
-    "You are a super genius scientist that found a cure to this disease, but there is no way to tell which cities are actually affected by the disease.\n",
-    "Your training set includes 1000 cities that you know are affected by the disease and the ones you have cured, with parameters being: Population, Number of deaths in 1 month span before the cure was implemented.\n",
-    "Now you have to find out of the Test Set, which cities need the cure.\n",
-    "\n",
-    "*****Training Set and Test Set randomly generated*****\n"
+    "<p>This is an example to see how kNN works.<br />Here we assume a simple dataset with 2 parameters to better visualize the data. (kNN can work on more than 2 parameters but for understanding purpose we take only 2)<br />The 2 parameters are population and number of deaths:<br /><strong>*****Do not take this example seriously*****</strong><br />A fatal disease has spread across many cities of the world. The most dangerous thing about this disease is that it has no symptoms and people just suddenly die.<br />You are a super genius scientist that found a cure to this disease, but there is no way to tell which cities are actually affected by the disease.<br />Your training set includes 1000 cities that you know are affected by the disease and the ones you have cured, with parameters being: Population, Number of deaths in 1 month span before the cure was implemented.<br />Now you have to find out of the Test Set, which cities need the cure.</p>\n",
+    "<p><strong>*****Training Set and Test Set randomly generated*****</strong></p>\n"
    ]
   },
   {
